feat: Update tags in version1.mdx and add new tag despliegues

--- a/src/content/blog/version1.mdx
+++ b/src/content/blog/version1.mdx
@@ -3,7 +3,7 @@ title: Gestoru software | version 1.0.0
 date: '2024-04-16'
 cover: '@/assets/version1.webp'
 summary: 'Lanzamientos de la versión 1.0.0 de Gestoru software.'
-tags: ['mijo']
+tags: ['despligues']
 authors: ['miguel']
 draft: true
 description: 'como vamos maquina'
