Update version1.mdx draft status and remove default and mijo tags

--- a/src/content/blog/version1.mdx
+++ b/src/content/blog/version1.mdx
@@ -5,7 +5,7 @@ cover: '@/assets/version1.webp'
 summary: 'Lanzamientos de la versión 1.0.0 de Gestoru software.'
 tags: ['despliegues']
 authors: ['miguel']
-draft: true
+draft: false
 description: 'como vamos maquina'
 ---
 
