--- a/src/content/blog/version1.mdx
+++ b/src/content/blog/version1.mdx
@@ -6,7 +6,7 @@ summary: 'Lanzamientos de la versión 1.0.0 de Gestoru software.'
 tags: ['despliegues']
 authors: ['miguel']
 draft: true
-description: 'como vamos maquina'
+description: 'Lanzamiento 1'
 ---
 
 # ¿Qué cambio?
